<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#1D103E"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="335dp"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/horoscope2021_" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/welcome_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/welcome_txt"
            android:textAllCaps="true"
            android:textColor="#B494E9"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/list_text"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/list_text"
            android:text="@string/list_text"
            android:textAllCaps="false"
            android:textColor="#9C27B0"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/zodiac_signs"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="#FFFFFF"
            android:entries="@array/zodiac_signs"
            android:forceDarkAllowed="false"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/list_days"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/list_days"
            android:text="@string/list_days"
            android:textAllCaps="false"
            android:textColor="#9C27B0"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/days"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="#FFFFFF"
            android:entries="@array/array_days"
            android:forceDarkAllowed="false"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" />

        <Button
            android:id="@+id/btn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn"
            app:backgroundTint="#B494E9" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>